# todolist_new

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: actions.yaml
deploy/: .env  docker-compose.yaml  nginx.conf
todolist/: .env
todolist/bot/: models.py  serializers.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py  0002_alter_tguser_chat_id.py
todolist/bot/tg/: client.py  models.py
todolist/bot/tg/fsm/: base.py  memory_storage.py
todolist/core/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py  0002_alter_user_options.py
todolist/goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py  0007_alter_goal_options.py
todolist/todolist/: settings.py  urls.py
