[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Olga Smotrova <olgahikaritattoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
psycopg2-binary = "^2.9.5"
envparse = "^0.2.0"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.0.0"
serializers = "^0.2.4"
django-filter = "^22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
