[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Kibishicoder <kibishiart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
psycopg2-binary = "^2.9.5"
envparse = "^0.2.0"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.0.0"
serializers = "^0.2.4"
django-filter = "^22.1"
requests = "^2.28.1"
poetry-core = "^1.3.2"
django-pydantic = "^0.0.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
